--- a/daju_market_media.html
+++ b/daju_market_media.html
@@ -19,12 +19,14 @@
 
     <link rel="stylesheet" href="./css/daju_style.css" />
     <link rel="stylesheet" href="./css/daju_market_media.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <title>Document</title>
   </head>
   <body>
     <header>
       <div class="top_banner">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <button
               class="navbar-toggler"
@@ -69,7 +71,10 @@
           <a href="tel:0224690239" target="blank">
             <img src="/images/icon_phone.svg" alt="Phone" />
           </a>
-          <a href="https://www.facebook.com/profile.php?id=109128252080280" target="blank">
+          <a
+            href="https://www.facebook.com/profile.php?id=109128252080280"
+            target="blank"
+          >
             <img src="/images/icon_fb.svg" alt="Facebook" />
           </a>
           <a href="https://linktr.ee/dajyu" target="blank">
@@ -103,7 +108,7 @@
         <div class="media_block">
           <ul>
             <!-- SUP -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media1.png" alt="" />
@@ -138,7 +143,7 @@
             </li>
 
             <!-- bloger2 -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media2.png" alt="" />
@@ -174,7 +179,7 @@
             </li>
 
             <!-- bloger3 -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media3.png" alt="" />
@@ -210,7 +215,7 @@
             </li>
 
             <!-- bloger4 -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom"data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media4.png" alt="" />
@@ -246,7 +251,7 @@
             </li>
 
             <!-- bloger5 -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom"data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media5.png" alt="" />
@@ -279,7 +284,7 @@
             </li>
 
             <!-- bloger6 -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom"data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media6.png" alt="" />
@@ -312,7 +317,7 @@
             </li>
 
             <!-- bloger7 -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom"data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media7.png" alt="" />
@@ -349,7 +354,7 @@
             </li>
 
             <!-- bloger8 -->
-            <li>
+            <li data-aos="fade-up" data-aos-anchor-placement="top-bottom"data-aos-duration="2000">
               <div class="media_li">
                 <div>
                   <img src="./images/media8.png" alt="" />
@@ -394,7 +399,10 @@
             <a href="tel:0224690239" target="blank">
               <img src="/images/footer_icon_phone.svg" alt="" />
             </a>
-            <a href="https://www.facebook.com/profile.php?id=109128252080280" target="blank">
+            <a
+              href="https://www.facebook.com/profile.php?id=109128252080280"
+              target="blank"
+            >
               <img src="/images/footer_icon_fb.svg" alt="" />
             </a>
             <a href="https://linktr.ee/dajyu" target="blank">
@@ -524,5 +532,9 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
