--- a/daju_information.html
+++ b/daju_information.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <div class="top_banner">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <button
               class="navbar-toggler"
