--- a/daju_bridge.html
+++ b/daju_bridge.html
@@ -63,6 +63,26 @@
                   <a class="nav-link" href="daju_information.html">交通資訊</a>
                 </li>
               </ul>
+              <div class="header_content">
+                <h4>大聚休閒中心</h4>
+                <div class="header_media">
+                  <h4>社群連結</h4>
+                </div>
+                <div class="header_media_icon">
+                  <a href="tel:0224690239" target="blank">
+                    <img src="/images/icon_phone.svg" alt="Phone" />
+                  </a>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=109128252080280"
+                    target="blank"
+                  >
+                    <img src="/images/icon_fb.svg" alt="Facebook" />
+                  </a>
+                  <a href="https://linktr.ee/dajyu" target="blank">
+                    <img src="/images/icon_linktree.svg" alt="Linktree" />
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </nav>
@@ -70,7 +90,10 @@
           <a href="tel:0224690239" target="blank">
             <img src="/images/icon_phone.svg" alt="Phone" />
           </a>
-          <a href="https://www.facebook.com/profile.php?id=109128252080280" target="blank">
+          <a
+            href="https://www.facebook.com/profile.php?id=109128252080280"
+            target="blank"
+          >
             <img src="/images/icon_fb.svg" alt="Facebook" />
           </a>
           <a href="https://linktr.ee/dajyu" target="blank">
@@ -157,7 +180,7 @@
           <div class="introduce_text">
             <h1>十杯<br>Spade Tea</h1>
             <h5>
-              牧場直送純淨鮮乳x百年茶莊嚴選茶葉，不計成本的絕妙茶奶比例，成就一杯最天然好喝 ...,...店的客人都是我們最誠摯對待的好朋友，我們製作的每一杯飲品，都只為了給你最用心的體驗！十杯原創的招牌牧奶茶——嚴選茶葉與牧場直送鮮乳相遇的好滋味！
+              牧場直送純淨鮮乳x百年茶莊嚴選茶葉，不計成本的絕妙茶奶比例，成就一杯最天然好喝 ......店的客人都是我們最誠摯對待的好朋友，我們製作的每一杯飲品，都只為了給你最用心的體驗！十杯原創的招牌牧奶茶——嚴選茶葉與牧場直送鮮乳相遇的好滋味！
             </h5>
           </div>
         </div>
@@ -181,7 +204,7 @@
           <div class="introduce_text">
             <h1>咖央潮境店<br/>Cafejiasong</h1>
             <h5>
-              在潮境智能海洋館的懸浮景觀餐廳中有飄浮的空中閣樓咖啡廳之稱，號稱全台最美的景觀咖啡廳，推薦咖啡有西西里咖啡、飄浮咖啡、喜愛傳統口味的朋友也可以選擇，拿鐵或美式咖啡，店裡的點心都是自己製作的，有現烤的水果鬆餅、熔岩巧克力布朗尼、冰淇淋還有現烤的手做披薩、鹹派等。
+              在潮境智能海洋館的懸浮景觀餐廳中有飄浮的空中閣樓咖啡廳之稱，號稱全台最美的景觀咖啡廳，推薦咖啡有西西里咖啡、飄浮咖啡、喜愛傳統口味的朋友也可以選擇，拿鐵或美式咖啡，<br><br>店裡的點心都是自己製作的，有現烤的水果鬆餅、熔岩巧克力布朗尼、冰淇淋還有現烤的手做披薩、鹹派等。
             </h5>
           </div>
         </div>
