--- a/daju_market_media.html
+++ b/daju_market_media.html
@@ -64,6 +64,26 @@
                   <a class="nav-link" href="daju_information.html">交通資訊</a>
                 </li>
               </ul>
+              <div class="header_content">
+                <h4>大聚休閒中心</h4>
+                <div class="header_media">
+                  <h4>社群連結</h4>
+                </div>
+                <div class="header_media_icon">
+                  <a href="tel:0224690239" target="blank">
+                    <img src="/images/icon_phone.svg" alt="Phone" />
+                  </a>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=109128252080280"
+                    target="blank"
+                  >
+                    <img src="/images/icon_fb.svg" alt="Facebook" />
+                  </a>
+                  <a href="https://linktr.ee/dajyu" target="blank">
+                    <img src="/images/icon_linktree.svg" alt="Linktree" />
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </nav>
