--- a/daju_information.html
+++ b/daju_information.html
@@ -63,6 +63,26 @@
                   <a class="nav-link" href="daju_information.html">交通資訊</a>
                 </li>
               </ul>
+              <div class="header_content">
+                <h4>大聚休閒中心</h4>
+                <div class="header_media">
+                  <h4>社群連結</h4>
+                </div>
+                <div class="header_media_icon">
+                  <a href="tel:0224690239" target="blank">
+                    <img src="/images/icon_phone.svg" alt="Phone" />
+                  </a>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=109128252080280"
+                    target="blank"
+                  >
+                    <img src="/images/icon_fb.svg" alt="Facebook" />
+                  </a>
+                  <a href="https://linktr.ee/dajyu" target="blank">
+                    <img src="/images/icon_linktree.svg" alt="Linktree" />
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </nav>
@@ -70,7 +90,10 @@
           <a href="tel:0224690239" target="blank">
             <img src="/images/icon_phone.svg" alt="Phone" />
           </a>
-          <a href="https://www.facebook.com/profile.php?id=109128252080280" target="blank">
+          <a
+            href="https://www.facebook.com/profile.php?id=109128252080280"
+            target="blank"
+          >
             <img src="/images/icon_fb.svg" alt="Facebook" />
           </a>
           <a href="https://linktr.ee/dajyu" target="blank">
@@ -79,7 +102,7 @@
         </div>
       </div>
     </header>
-
+    
     <article>
       <section class="information_switchtab">
         <div class="switch_title">
