--- a/daju_lane.html
+++ b/daju_lane.html
@@ -63,6 +63,26 @@
                   <a class="nav-link" href="daju_information.html">交通資訊</a>
                 </li>
               </ul>
+              <div class="header_content">
+                <h4>大聚休閒中心</h4>
+                <div class="header_media">
+                  <h4>社群連結</h4>
+                </div>
+                <div class="header_media_icon">
+                  <a href="tel:0224690239" target="blank">
+                    <img src="/images/icon_phone.svg" alt="Phone" />
+                  </a>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=109128252080280"
+                    target="blank"
+                  >
+                    <img src="/images/icon_fb.svg" alt="Facebook" />
+                  </a>
+                  <a href="https://linktr.ee/dajyu" target="blank">
+                    <img src="/images/icon_linktree.svg" alt="Linktree" />
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </nav>
@@ -70,7 +90,10 @@
           <a href="tel:0224690239" target="blank">
             <img src="/images/icon_phone.svg" alt="Phone" />
           </a>
-          <a href="https://www.facebook.com/profile.php?id=109128252080280" target="blank">
+          <a
+            href="https://www.facebook.com/profile.php?id=109128252080280"
+            target="blank"
+          >
             <img src="/images/icon_fb.svg" alt="Facebook" />
           </a>
           <a href="https://linktr.ee/dajyu" target="blank">
@@ -79,7 +102,6 @@
         </div>
       </div>
     </header>
-
     <article>
       <section>
         <div class="content_about lane_anout">
@@ -172,7 +194,7 @@
           <div class="introduce_text">
             <h1>海有個地方<br />望海店</h1>
             <h5>
-              位於八斗子望海巷園區內，是國內少數直面海景第一排的景觀餐廳，餐廳採戶外開放式經營，讓遊客享受最美麗的海灣，因為獨特的天氣關係，每年這裡只能經營7個月，夏季開始提供燒烤串及生啤酒暢飲，搭配海風及海景成為了濱海地區最美麗的景觀燒烤餐廳。
+              海有個地方並非以咖啡為主力的飲品餐廳，反而有販售酒精飲品及特調，在酒精Ｍenu上，酒杯符號越多的飲品就表示酒精濃度越高，在逛完潮境智能海洋館，不妨來海有個地方放鬆一下吧海有個地方， 為了要迎合特有的海邊景觀與浪漫，海有個地放特色飲品有調酒類、與非酒精類型，海鹽奶茶、柴魚紅茶、昆布綠茶…等特色飲品，調酒類的飲料包含有雞籠、女巫、鳳茶、….等許多特色調酒，希望更多的遊客來到這裡能真正的享受到獨有的風格。
             </h5>
           </div>
         </div>
