--- a/daju_bridge.html
+++ b/daju_bridge.html
@@ -69,16 +69,16 @@
                   <h4>社群連結</h4>
                 </div>
                 <div class="header_media_icon">
-                  <a href="tel:0224690239" target="blank">
+                  <a href="tel:0224690239" target="_blank">
                     <img src="/images/icon_phone.svg" alt="Phone" />
                   </a>
                   <a
                     href="https://www.facebook.com/profile.php?id=109128252080280"
-                    target="blank"
+                    target="_blank"
                   >
                     <img src="/images/icon_fb.svg" alt="Facebook" />
                   </a>
-                  <a href="https://linktr.ee/dajyu" target="blank">
+                  <a href="https://linktr.ee/dajyu" target="_blank">
                     <img src="/images/icon_linktree.svg" alt="Linktree" />
                   </a>
                 </div>
@@ -87,16 +87,16 @@
           </div>
         </nav>
         <div class="media_icon">
-          <a href="tel:0224690239" target="blank">
+          <a href="tel:0224690239" target="_blank">
             <img src="/images/icon_phone.svg" alt="Phone" />
           </a>
           <a
             href="https://www.facebook.com/profile.php?id=109128252080280"
-            target="blank"
+            target="_blank"
           >
             <img src="/images/icon_fb.svg" alt="Facebook" />
           </a>
-          <a href="https://linktr.ee/dajyu" target="blank">
+          <a href="https://linktr.ee/dajyu" target="_blank">
             <img src="/images/icon_linktree.svg" alt="Linktree" />
           </a>
         </div>
@@ -168,7 +168,7 @@
           <div class="introduce_text">
             <h1>海有個地方<br>I OCEAN</h1>
             <h5>
-              位於八斗子望海巷園區內，是國內少數直面海景第一排的景觀餐廳，餐廳採戶外開放式經營，讓遊客享受最美麗的海灣，因為獨特的天氣關係，每年這裡只能經營7個月，夏季開始提供燒烤串及生啤酒暢飲，搭配海風及海景成為了濱海地區最美麗的景觀燒烤餐廳。
+              位於八斗子潮境智能海洋館三大懸浮咖啡廳的中堅，空橋走廊正中間的海有個地方 Anather Place ，用海洋、永續及在地的概念設計出許多耳目一新的飲品，有許多的經典飲品頗受網友喜愛，更多文人墨客喜愛它獨特地風格。<br><br>尤其獨特風景視覺在雨天及颱風天，特有的觀浪潮讓許多造訪的遊客，增添莫名的小確幸，在懸浮閣樓上遙望整個海間的獨特浪潮，一幕幕一整排延綿數百米的浪花，是北海岸風景一絕。
             </h5>
           </div>
         </div>
@@ -204,7 +204,7 @@
           <div class="introduce_text">
             <h1>咖央潮境店<br/>Cafejiasong</h1>
             <h5>
-              在潮境智能海洋館的懸浮景觀餐廳中有飄浮的空中閣樓咖啡廳之稱，號稱全台最美的景觀咖啡廳，推薦咖啡有西西里咖啡、飄浮咖啡、喜愛傳統口味的朋友也可以選擇，拿鐵或美式咖啡，<br><br>店裡的點心都是自己製作的，有現烤的水果鬆餅、熔岩巧克力布朗尼、冰淇淋還有現烤的手做披薩、鹹派等。
+              在潮境智能海洋館的懸浮景觀餐廳中有飄浮的空中閣樓咖啡廳之稱，號稱全台最美的景觀咖啡廳，推薦咖啡有西西里咖啡、飄浮咖啡、喜愛傳統口味的朋友也可以選擇，拿鐵或美式咖啡。<br><br>店裡的點心都是自己製作的，有現烤的水果鬆餅、熔岩巧克力布朗尼、冰淇淋還有現烤的手做披薩、鹹派等。
             </h5>
           </div>
         </div>
@@ -217,13 +217,13 @@
         <div class="footer_media">
           <h4>社群連結</h4>
           <div class="footer_media_icon">
-            <a href="tel:0224690239" target="blank">
+            <a href="tel:0224690239" target="_blank">
               <img src="/images/footer_icon_phone.svg" alt="" />
             </a>
-            <a href="https://www.facebook.com/profile.php?id=109128252080280" target="blank">
+            <a href="https://www.facebook.com/profile.php?id=109128252080280" target="_blank">
               <img src="/images/footer_icon_fb.svg" alt="" />
             </a>
-            <a href="https://linktr.ee/dajyu" target="blank">
+            <a href="https://linktr.ee/dajyu" target="_blank">
               <img src="/images/footer_icon_linktree.svg" alt="" />
             </a>
           </div>
