--- a/daju_index.html
+++ b/daju_index.html
@@ -106,16 +106,16 @@
                   <h4>社群連結</h4>
                 </div>
                 <div class="header_media_icon">
-                  <a href="tel:0224690239" target="blank">
+                  <a href="tel:0224690239" target="_blank">
                     <img src="/images/icon_phone.svg" alt="Phone" />
                   </a>
                   <a
                     href="https://www.facebook.com/profile.php?id=109128252080280"
-                    target="blank"
+                    target="_blank"
                   >
                     <img src="/images/icon_fb.svg" alt="Facebook" />
                   </a>
-                  <a href="https://linktr.ee/dajyu" target="blank">
+                  <a href="https://linktr.ee/dajyu" target="_blank">
                     <img src="/images/icon_linktree.svg" alt="Linktree" />
                   </a>
                 </div>
@@ -124,16 +124,16 @@
           </div>
         </nav>
         <div class="media_icon">
-          <a href="tel:0224690239" target="blank">
+          <a href="tel:0224690239" target="_blank">
             <img src="/images/icon_phone.svg" alt="Phone" />
           </a>
           <a
             href="https://www.facebook.com/profile.php?id=109128252080280"
-            target="blank"
+            target="_blank"
           >
             <img src="/images/icon_fb.svg" alt="Facebook" />
           </a>
-          <a href="https://linktr.ee/dajyu" target="blank">
+          <a href="https://linktr.ee/dajyu" target="_blank">
             <img src="/images/icon_linktree.svg" alt="Linktree" />
           </a>
         </div>
@@ -350,7 +350,7 @@
       </div>
 
       <!-- 鸚鵡螺市集 -->
-      <div class="content_title markrt_block">
+      <div class="content_title market_block">
         <h1>鸚鵡螺市集</h1>
         <div class="content_mid">
           <div class="content_img">
@@ -465,13 +465,13 @@
         <div class="footer_media">
           <h4>社群連結</h4>
           <div class="footer_media_icon">
-            <a href="tel:0224690239" target="blank">
+            <a href="tel:0224690239" target="_blank">
               <img src="/images/footer_icon_phone.svg" alt="" />
             </a>
-            <a href="https://www.facebook.com/keelungocea" target="blank">
+            <a href="https://www.facebook.com/keelungocea" target="_blank">
               <img src="/images/footer_icon_fb.svg" alt="" />
             </a>
-            <a href="https://linktr.ee/dajyu" target="blank">
+            <a href="https://linktr.ee/dajyu" target="_blank">
               <img src="/images/footer_icon_linktree.svg" alt="" />
             </a>
           </div>
