--- a/daju_market_media.html
+++ b/daju_market_media.html
@@ -70,16 +70,16 @@
                   <h4>社群連結</h4>
                 </div>
                 <div class="header_media_icon">
-                  <a href="tel:0224690239" target="blank">
+                  <a href="tel:0224690239" target="_blank">
                     <img src="/images/icon_phone.svg" alt="Phone" />
                   </a>
                   <a
                     href="https://www.facebook.com/profile.php?id=109128252080280"
-                    target="blank"
+                    target="_blank"
                   >
                     <img src="/images/icon_fb.svg" alt="Facebook" />
                   </a>
-                  <a href="https://linktr.ee/dajyu" target="blank">
+                  <a href="https://linktr.ee/dajyu" target="_blank">
                     <img src="/images/icon_linktree.svg" alt="Linktree" />
                   </a>
                 </div>
@@ -88,16 +88,16 @@
           </div>
         </nav>
         <div class="media_icon">
-          <a href="tel:0224690239" target="blank">
+          <a href="tel:0224690239" target="_blank">
             <img src="/images/icon_phone.svg" alt="Phone" />
           </a>
           <a
             href="https://www.facebook.com/profile.php?id=109128252080280"
-            target="blank"
+            target="_blank"
           >
             <img src="/images/icon_fb.svg" alt="Facebook" />
           </a>
-          <a href="https://linktr.ee/dajyu" target="blank">
+          <a href="https://linktr.ee/dajyu" target="_blank">
             <img src="/images/icon_linktree.svg" alt="Linktree" />
           </a>
         </div>
@@ -416,16 +416,16 @@
         <div class="footer_media">
           <h4>社群連結</h4>
           <div class="footer_media_icon">
-            <a href="tel:0224690239" target="blank">
+            <a href="tel:0224690239" target="_blank">
               <img src="/images/footer_icon_phone.svg" alt="" />
             </a>
             <a
               href="https://www.facebook.com/profile.php?id=109128252080280"
-              target="blank"
+              target="_blank"
             >
               <img src="/images/footer_icon_fb.svg" alt="" />
             </a>
-            <a href="https://linktr.ee/dajyu" target="blank">
+            <a href="https://linktr.ee/dajyu" target="_blank">
               <img src="/images/footer_icon_linktree.svg" alt="" />
             </a>
           </div>
